[gd_scene load_steps=11 format=2]

[ext_resource path="res://Levels/Components/Laser.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Weapons/laser_circle.png" type="Texture" id=2]
[ext_resource path="res://Items/Weapons/HitBox.gd" type="Script" id=3]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0.703226, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.539326, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.988764, 0.0204545 ), -0.0521994, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]
curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
flag_disable_z = true
spread = 90.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 64.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.7
scale_curve = SubResource( 4 )
color_ramp = SubResource( 2 )

[sub_resource type="ParticlesMaterial" id=6]
flag_disable_z = true
spread = 90.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 200.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.7
scale_curve = SubResource( 4 )
color_ramp = SubResource( 2 )

[sub_resource type="CircleShape2D" id=7]

[node name="Laser" type="RayCast2D"]
enabled = true
cast_to = Vector2( 1000, 0 )
collision_mask = 33
script = ExtResource( 1 )

[node name="Line2D" type="Line2D" parent="."]
points = PoolVector2Array( 0, 0, 3, 0 )
default_color = Color( 0.5, 3, 6, 1 )

[node name="Tween" type="Tween" parent="."]

[node name="CastingParticles2D" type="Particles2D" parent="."]
emitting = false
lifetime = 0.3
process_material = SubResource( 5 )
texture = ExtResource( 2 )

[node name="CollisionParticles2D" type="Particles2D" parent="."]
emitting = false
lifetime = 0.3
process_material = SubResource( 6 )
texture = ExtResource( 2 )

[node name="HitBox" type="Area2D" parent="."]
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource( 7 )
